updating Worflow yml with directory locations

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,16 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
+      working-directory: main.tf
 
     - name: Terraform Validate
       run: terraform validate
+      working-directory: main.tf
 
     - name: Terraform Plan
       run: terraform plan
+      working-directory: main.tf
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
+      working-directory: main.tf
